v1.16.0: add a method to pass on JVM memory settings on to forked JVMs